Closed Bug 1900009 Opened 8 months ago Closed 7 months ago

Saved Email address for ChatGPT Login not automatically filled in

Categories

(Toolkit :: Password Manager, defect, P3)

Firefox 126
defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: loeper, Assigned: rsafaeian, Mentored)

References

(Regressed 1 open bug)

Details

(Whiteboard: [fxcm-autofill-improvements-2024q3])

Attachments

(2 files, 1 obsolete file)

Steps to reproduce:

  1. create a login for ChatGPT with email address and password (if not existing)
  2. turn on credentials saving and login to ChatGPT, save credentials
  3. goto https://chatgpt.com/auth/login
  4. click on "Log in"

Actual results:

  1. A new page appears with a field "Email address". The field ist empty.
  2. Clicking into the field brings no reaction.

Expected results:

  1. The field should contain the email address from the saved credentials or a list of fitting credentials to choose
  2. If 1. is not possible, a click into the field should give a list of saved credentials to choose. Clicking one of the list items should fill in the choosen email address.
Summary: Saved Email address for ChatGPT not automatically filled in → Saved Email address for ChatGPT Login not automatically filled in
Attachment #9404984 - Attachment description: in Chrome, after clicking the field a menu appears → in Chrome, after clicking the field a list (menu) with email addesses from saved credentials appears

The Bugbug bot thinks this bug should belong to the 'Toolkit::Password Manager' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Password Manager
Product: Firefox → Toolkit

Hey loeper, Thanks for reporting. I can confirm this is happening on latest release.
After doing some digging, the initial page has a formless username input of this shape:

<input class="email-input " inputmode="email" type="email" id="email-input" name="email" autocomplete="username" autocapitalize="none" spellcheck="false" required="" placeholder="">

We don't show the autofill popup on username inputs without a form right now.

I think this is something we can add. Right now, we only dispatch DOMFormHasPossibleUsername for text and email inputs within a form. I think we can allow autocomplete="username without a form too since this is a strong hint that a field is a username.

Alternatively, we can also check here if autocomplete="username and add LoginManager as a provider for that input.

Dimi what do you think ?

Flags: needinfo?(dlee)

Yes, i agree supporting formless username-only form when the input has autocomplete="username" is a good start.
Besides supporting formless username-only form, we also need to check whether we can recognize this <input> as a "
login" form (see the code block here).

Severity: -- → S3
Flags: needinfo?(dlee)
Priority: -- → P3
See Also: → 1745918
Mentor: dlee
Assignee: nobody → rsafaeian
Whiteboard: [fxcm-autofill-improvements-2024q3]
Attachment #9408659 - Attachment is obsolete: true
Pushed by rsafaeian@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6a254993ba42 Dispatch DOMPossibleUsernameInputAdded event for valid text and email inputs. r=dimi,edgar
Regressions: 1907650
Status: UNCONFIRMED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
Regressions: 1908369
QA Whiteboard: [qa-130b-p2]
Duplicate of this bug: 1531164
Regressions: 1919301
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: